--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.2.5",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/cookie": "^0.4.0",
     "@types/jest": "^24.0.0",
@@ -18,18 +16,26 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.7",
     "cookie": "^0.4.1",
-    "react": "^17.0.1",
+    "react": "^16.x",
     "react-cookie": "^4.0.3",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.x",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "~3.8.2"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "jest": "26.6.0",
+    "react-test-renderer": "^16.x",
+    "ts-jest": "^26.4.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
