--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "typescript": "~3.8.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
     "jest": "26.6.0",
+    "msw": "^0.25.0",
     "react-test-renderer": "^16.x",
     "ts-jest": "^26.4.4"
   },
