--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
+    "husky": "^5.0.6",
     "jest": "26.6.0",
     "msw": "^0.25.0",
     "react-test-renderer": "^16.x",
     "ts-jest": "^26.4.4"
   },
   "scripts": {
+    "postinstall": "husky install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
@@ -53,5 +55,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "pre-commit": "echo 'Husky pre-commit!'",
+    "pre-push": "npm test"
   }
 }
