--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
+    "@types/redux-mock-store": "^1.0.2",
+    "@types/testing-library__dom": "^7.5.0",
     "husky": "^5.0.6",
     "jest": "26.6.0",
     "msw": "^0.25.0",
     "react-test-renderer": "^16.x",
+    "redux-mock-store": "^1.5.4",
     "ts-jest": "^26.4.4"
   },
   "scripts": {
