--- a/package.json
+++ b/package.json
@@ -29,6 +29,14 @@
     "@testing-library/react": "^11.2.3",
     "@types/redux-mock-store": "^1.0.2",
     "@types/testing-library__dom": "^7.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint": "^7.18.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.22.0",
     "husky": "^5.0.6",
     "jest": "26.6.0",
     "msw": "^0.25.0",
@@ -42,10 +50,9 @@
     "build": "react-scripts build",
     "test": "jest",
     "test:watch": "jest --watch",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
