--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@testing-library/react": "^11.2.3",
     "@types/redux-mock-store": "^1.0.2",
     "@types/testing-library__dom": "^7.5.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
+    "@typescript-eslint/eslint-plugin": "4.0.1",
+    "@typescript-eslint/parser": "4.0.1",
     "eslint": "^7.18.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
@@ -45,13 +45,12 @@
     "ts-jest": "^26.4.4"
   },
   "scripts": {
-    "postinstall": "husky install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
+    "test:watch": "reacts-scripts test",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "eject": "react-scripts eject"
   },
   "browserslist": {
