--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -1,10 +1,11 @@
 pipeline {
-    agent {
-      docker { image 'node:14-alpine' }
-    }
+    // agent {
+    //   docker { image 'node:14-alpine' }
+    // }
     stages {
         stage('build') {
             steps {
+                sh 'echo $USER'
                 sh 'npm --version'
             }
         }
