--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -1,7 +1,10 @@
 pipeline {
-    // agent {
-    //   docker { image 'node:14-alpine' }
-    // }
+    agent {
+      // docker { image 'node:14-alpine' }
+      node {
+        label 'rpi'
+      }
+    }
     stages {
         stage('build') {
             steps {
