--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent {
       // docker { image 'node:14-alpine' }
       node {
-        label 'rpi'
+        label 'master'
       }
     }
     stages {
