--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -1,9 +1,6 @@
 pipeline {
     agent {
-      // docker { image 'node:14-alpine' }
-      node {
-        label 'master'
-      }
+      docker { image 'node:14-alpine' }
     }
     stages {
         stage('build') {
