--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -5,8 +5,8 @@ pipeline {
     stages {
         stage('build') {
             steps {
-                sh 'echo $USER'
-                sh 'npm --version'
+                sh 'node -v'
+                sh 'npm install'
             }
         }
     }
