--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -1,13 +1,17 @@
 pipeline {
     agent {
       docker { image 'node:14-alpine' }
+      environment {
+        HOME = '.'
+      }
     }
     stages {
-        stage('build') {
-            steps {
-                sh 'node -v'
-                sh 'npm install'
-            }
-        }
+      stage('build') {
+          steps {
+              sh 'node -v'
+              // sh 'chown -R 117:123 "/.npm"'
+              sh 'npm install'
+          }
+      }
     }
 }
