--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
       stage('build') {
         steps {
           sh 'node -v'
-          sh 'sudo chown -R 117:123 "/.npm"'
+          sh 'chown -R 117:123 "/.npm"'
           sh 'npm install'
         }
       }
