--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
+    "test:ci": "jest --runInBand",
     "test:watch": "reacts-scripts test",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
