--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -1,31 +1,31 @@
 pipeline {
-    agent {
-      docker { image 'node:14-alpine' }
-    }
-    stages {
-      stage('install') {
-        steps {
-          sh 'node -v'
-          sh 'echo $PWD'
-          sh 'HOME=. npm install'
-        }
-      }
-      stage('unit tests') {
-        steps {
-          sh 'npm run test:ci'
-        }
-      }
-      stage('build') {
-        steps {
-          sh 'npm run build'
-        }
-      }
-      stage('docker run') {
-        steps {
-          sh 'docker stop my_content_client'
-          sh 'docker run -it --rm -d -p 8000:80 --name my_content_client \
-          -v $PWD/build:/usr/share/nginx/html nginx'
-        }
+  agent {
+    node { label 'master' }
+  }
+  stages {
+    stage('install') {
+      steps {
+        sh 'node -v'
+        sh 'echo $PWD'
+        sh 'npm install'
       }
     }
+    stage('unit tests') {
+      steps {
+        sh 'npm run test:ci'
+      }
+    }
+    stage('build') {
+      steps {
+        sh 'npm run build'
+      }
+    }
+    stage('docker run') {
+      steps {
+        sh 'docker stop my_content_client'
+        sh 'docker run -it --rm -d -p 8000:80 --name my_content_client \
+        -v $PWD/build:/usr/share/nginx/html nginx'
+      }
+    }
+  }
 }
