--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -7,8 +7,7 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        root   /usr/share/nginx/html;
-        try_files '' /index.html =404;
+        try_files $uri /index.html;
     }
 
     #error_page  404              /404.html;
