--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -2,6 +2,9 @@ pipeline {
   agent {
     node { label 'master' }
   }
+  environment {
+    REACT_APP_API_URL=https://localhost:3210/api
+  }
   stages {
     stage('install') {
       steps {
