--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -17,7 +17,8 @@ pipeline {
     }
     stage('build') {
       environment {
-        REACT_APP_API_URL = 'http://localhost:8001/api'
+        // TODO: move to jenkins job parameter
+        REACT_APP_API_URL = 'http://malina0:8001/api'
       }
       steps {
         sh 'npm run build'
