--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
     stage('docker run') {
       steps {
         sh 'docker stop my_content_client || true'
-        sh 'docker run -it --rm -d -p 8000:80 --name my_content_client \
+        sh 'docker run -it --rm -d -p $EXT_PORT:$PORT --name my_content_client \
             -v $PWD/nginx/conf.d:/etc/nginx/conf.d \
             -v $PWD/build:/usr/share/nginx/html nginx'
       }
