--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -22,11 +22,8 @@ pipeline {
     }
     stage('deploy') {
       steps {
-        sh 'rm -rf /home/pi/public_html/*'
-        sh 'cp -R ${PWD}/build/* /home/pi/public_html/'
-        // sh 'docker run -it --rm -d -p $CLIENT_PORT:$PORT --name my_content_client \
-        //     -v $PWD/nginx/conf.d:/etc/nginx/conf.d \
-        //     -v $PWD/build:/usr/share/nginx/html nginx'
+        sh 'rm -rf ${TARGET_DIR}/*'
+        sh 'cp -R ${PWD}/build/* ${TARGET_DIR}/'
       }
     }
   }
